# dmon-xanalysis

./: .gitmodules  Makefile  config.mk
config/sockshop-t1mx10-t5mx10/: sockshop-t1mx10-t5mx10-workflow.yml
docker/lakeside/: Makefile
docker/robotshop/: Makefile  std-dmon.yml
docker/sockshop/: Makefile  dns-std-dmon.yml  rpl-dmon.yml  std-dmon.yml
docs/: Makefile  README.grip.html  README.html  README.md  README.pandoc.html
fdriver/: pyproject.toml
fdriver/src/: driver.py  main.py
meta/example/: robotshop-example-workflow.yml
meta/robotshop-t1mx10-t5mx10/: robotshop-t5mx10-workload.yml
script/: test.yml
script/src/: args.py  driver.py  fs.py  main.py  meta.py
src/alyslib/: alyslib.py  pyproject.toml
src/fdriver/: args.py  driver.py  pyproject.toml
test/: pyproject.toml  testlib.py
test/141222-152519-robotshop/: robotshop-t1mx10-t5mx10-analysis.html  robotshop-t1mx10-t5mx10-analysis.ipynb  robotshop-t1mx10-t5mx10-workflow.yml
test/151222-154618-lakeside/: lakeside-t1mx10-t5mx10-analysis.html  lakeside-t1mx10-t5mx10-analysis.ipynb  lakeside-t1mx10-t5mx10-workflow.yml
test/191222-154321-sockshop/: sockshop-t1mx10-t5mx10-analysis.html  sockshop-t1mx10-t5mx10-analysis.ipynb  sockshop-t1mx10-t5mx10-workflow.yml
test/221213-152748-robotshop/.ipynb_checkpoints/: robotshop-3-1m-2m-test-checkpoint.ipynb
test/_221213-152748-robotshop/: robotshop-3-1m-2m-test-workflow.yml  robotshop-3-1m-2m-test.ipynb  robotshop-multi-test-merged-dataframes.ipynb
tmp/: pyproject.toml  test.yml
tmp/src/: args.py  driver.py  main.py
(+1193 files in other folders)
