[tool.poetry]
name = "py-test-driver"
version = "0.1.0"
description = "Test workspace creator and runner"
authors = ["ricdip <riccardodpr@gmail.com>", "resu-gh <9valentino4@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_test_driver"}]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
