[tool.poetry]
name = "alyslib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
pandas = "^1.5.2"
jupyterlab = "^3.5.1"
python-lsp-server = "^1.6.0"
isort = "^5.11.1"
black = "^22.12.0"
jupyterlab-lsp = "^3.10.2"
jupyterlab-code-formatter = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
